[workspace]

members = [
  "node/parachain",
  "node/testnet-solo",
  "pallets/nft-delegation",
  "pallets/nft-permission",
  "pallets/nft-staking",
  "pallets/validator-subset-selection",
  "pallets/im-online",
  "pallets/doas",
  "pallets/treasury",
  "pallets/airdrop",
  "pallets/hold-vesting",
  "pallets/vesting-to-freeze",
  "pallets/staking-incentive",
  "pallets/extra-fungible-events",
  "runtime/parachain",
  "runtime/testnet-solo",
  "runtime-generator",
  "utils",
]

resolver = "2"

[workspace.package]
version = "0.4.0"
repository = "https://gitlab.dlabs.hu/mosaic-chain/mosaic-chain"
edition = "2021"
authors = ["Mosaic Team"]
license = "Apache-2.0 OR (GPL-3.0-or-later WITH Classpath-exception-2.0)"

[workspace.dependencies]
sdk = { package = "polkadot-sdk", git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409-1", default-features = false }
substrate-wasm-builder = { package = "substrate-wasm-builder", git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409-1", default-features = false }

# TODO: once procmacros are compatible with umbrella crate remove this
cumulus-pallet-parachain-system = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409-1", default-features = false }
sc-tracing = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409-1", default-features = false }

log = { version = "0.4.21", default-features = false }
env_logger = { version = "0.11.5", default-features = false }
serde = { version = "1.0.203", features = ["derive"], default-features = false }
serde_json = { version = "1.0.117", default-features = false }
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false }
clap = { version = "4.5.1" }
color-print = { version = "0.3.4" }
futures = { version = "0.3.30" }
hex-literal = { version = "0.4.1", default-features = false }
impl-trait-for-tuples = { version = "0.2.2" }
jsonrpsee = { version = "0.24.3" }
scale-info = { version = "2.11.1", default-features = false }
smallvec = { version = "1.11.2", default-features = false }
srtool-lib = { version = "0.12.0" }
ctrlc = { version = "3.4.4", default-features = false }
cargo_metadata = { version = "0.18.1", default-features = false }
anyhow = { version = "1.0.86" }
docify = { version = "0.2.8" }
inventory = { version = "0.3.15" }
rstest = { version = "0.22.0" }
rstest_reuse = { version = "0.7.0" }
delegate = { version = "0.13.1" }
enumflags2 = { version = "0.7.10" }

# Local
mosaic-testnet-solo-runtime = { default-features = false, path = "runtime/testnet-solo" }
mosaic-chain-runtime = { default-features = false, path = "runtime/parachain" }
pallet-doas = { default-features = false, path = "pallets/doas" }
pallet-nft-staking = { default-features = false, path = "pallets/nft-staking" }
pallet-nft-delegation = { default-features = false, path = "pallets/nft-delegation" }
pallet-nft-permission = { default-features = false, path = "pallets/nft-permission" }
pallet-validator-subset-selection = { default-features = false, path = "pallets/validator-subset-selection" }
pallet-im-online = { default-features = false, path = "pallets/im-online" }
pallet-treasury = { default-features = false, path = "pallets/treasury" }
pallet-airdrop = { default-features = false, path = "pallets/airdrop" }
pallet-hold-vesting = { default-features = false, path = "pallets/hold-vesting" }
pallet-vesting-to-freeze = { default-features = false, path = "pallets/vesting-to-freeze" }
pallet-staking-incentive = { default-features = false, path = "pallets/staking-incentive" }
pallet-extra-fungible-events = { default-features = false, path = "pallets/extra-fungible-events" }
utils = { default-features = false, path = "utils"}
runtime-generator = { default-features = false, path = "runtime-generator" }

[profile.release]
panic = "unwind"
